Create initial db context and migration

--- a/ShopMvcApp_PD211/Views/Products/Index.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@using ShopMvcApp_PD211.Controllers
+﻿@using ShopMvcApp_PD211.Entities
 @model List<Product>
 
 <h1>Products List</h1>
 <p>You can manage the products here.</p>
+
 
 <table class="table">
     <thead>
