--- a/ShopMvcApp_PD211/Views/_ViewImports.cshtml
+++ b/ShopMvcApp_PD211/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ShopMvcApp_PD211
 @using ShopMvcApp_PD211.Models
+@using ShopMvcApp_PD211.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
