--- a/ShopMvcApp_PD211/Views/Products/Index.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Index.cshtml
@@ -4,7 +4,10 @@
 <h1>Products List</h1>
 <p>You can manage the products here.</p>
 
-<a asp-action="Create" class="btn btn-primary mb-3">Add New Product</a>
+<a asp-action="Create" class="btn btn-primary mb-3">
+    <i class="bi bi-plus-lg"></i>
+    Add New Product
+</a>
 
 <table class="table">
     <thead>
