Add select category on product create page and add images

--- a/ShopMvcApp_PD211/Views/Home/Index.cshtml
+++ b/ShopMvcApp_PD211/Views/Home/Index.cshtml
@@ -1,14 +1,35 @@
-﻿<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core
-    </a>.</p>
+﻿@model List<Product>
 
-    @if(DateTime.Now.Minute % 2 == 0)
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>
+        Learn about <a href="https://learn.microsoft.com/aspnet/core">
+            building Web apps with ASP.NET Core
+        </a>.
+    </p>
+
+    @if (DateTime.Now.Minute % 2 == 0)
     {
         <p>Current minute is <span class="badge bg-info text-dark">even!</span></p>
     }
     else
     {
         <p>Current minute is <span class="badge bg-warning text-dark">odd!</span></p>
+    }
+</div>
+
+<div class="row row-cols-4 g-3">
+    @foreach (var i in Model)
+    {
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img height="170" src="@i.ImageUrl" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">@i.Title</h5>
+                    <p class="card-text">@i.Price$ - @i.Quantity</p>
+                    <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+        </div>
     }
 </div>
