--- a/ShopMvcApp_PD211/Views/Products/Create.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Create.cshtml
@@ -27,23 +27,22 @@
         <input required asp-for=Quantity type="number" min="0" class="form-control" placeholder="Enter product quantity">
     </div>
 
-    <div class="col-12">
+    <div class="col-md-12">
+        <label asp-for=CategoryId class="form-label">Category</label>
+        <select asp-for=CategoryId asp-items=@ViewBag.Categories class="form-select">
+            <option disabled selected>Choose product category...</option>
+        </select>
+    </div>
+
+   @*  <div class="col-12">
         <label asp-for=CategoryId class="form-label">Category Id</label>
         <input required asp-for=CategoryId type="number" class="form-control" placeholder="Enter product category id">
-    </div>
+    </div> *@
 
     <div class="col-12 mb-3">
         <label asp-for=Description class="form-label">Description</label>
         <textarea asp-for=Description class="form-control" rows="3" placeholder="Enter product description"></textarea>
     </div>
-
-    @* <div class="col-md-4">
-    <label for="inputState" class="form-label">Category</label>
-    <select id="inputState" class="form-select">
-    <option selected>Choose...</option>
-    <option>...</option>
-    </select>
-    </div> *@
 
     <div class="col-md-6">
         <a asp-action="Index" class="btn btn-dark w-100">
