--- a/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
@@ -6,10 +6,10 @@
 
 <form class="row g-3" method="post" asp-action="@(create ? "Create" : "Edit")">
 
-    <div class="col-2">
+    @* <div class="col-2">
         <label asp-for=Id class="form-label">Id</label>
         <input asp-for=Id readonly type="text" placeholder="Generated" class="form-control">
-    </div>
+    </div> *@
 
     <div class="col-10">
         <label asp-for=Title class="form-label">Title</label>
