--- a/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
@@ -49,7 +49,7 @@
 
     <div class="col-6">
         <label asp-for=ImageUrl class="form-label">Image URL</label>
-        <input asp-for=ImageUrl type="text" class="form-control" placeholder="Enter product image URL">
+        <input asp-for=ImageUrl type="url" class="form-control" placeholder="Enter product image URL">
         <span class="small text-danger" asp-validation-for="ImageUrl"></span>
     </div>
 
@@ -72,3 +72,7 @@
         </button>
     </div>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
