--- a/ShopMvcApp_PD211/Views/_ViewImports.cshtml
+++ b/ShopMvcApp_PD211/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ShopMvcApp_PD211
 @using ShopMvcApp_PD211.Models
 @using ShopMvcApp_PD211.Entities
+@using ShopMvcApp_PD211.Dtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
