--- a/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
+++ b/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
@@ -33,6 +33,13 @@
                             <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">
+                                <i class="bi bi-basket-fill"></i> (0)
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
