--- a/ShopMvcApp_PD211/Views/Cart/Index.cshtml
+++ b/ShopMvcApp_PD211/Views/Cart/Index.cshtml
@@ -7,23 +7,40 @@
     <div class="card-body">
         <h5 class="card-title">Product List</h5>
 
-        <ol class="list-group list-group-numbered">
-            @foreach (var i in Model)
-            {
-                <li class="list-group-item d-flex justify-content-between align-items-start">
+        @if (!Model.Any())
+        {
+            <p>Looks like your cart is empty</p>
+            <div>
+                <a asp-controller="Home" asp-action="Index" class="btn btn-primary mt-2">
+                    <i class="bi bi-basket2"></i> Back to Shopping
+                </a>
+            </div>
+        }
+        else
+        {
+            <ol class="list-group list-group-numbered">
+                @foreach (var i in Model)
+                {
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
 
-                    <div class="ms-2 me-auto text-start">
+                        <div class="ms-2 me-auto text-start">
 
-                        <img height="40" src="@i.ImageUrl" alt="@i.Title" />
-                        <div class="fw-bold">@i.Title</div>
-                        Category: @i.CategoryName | Stock: @i.Quantity
-                    </div>
-                    <span class="badge text-bg-primary rounded-pill">@i.Price$</span>
-                </li>
-            }
-        </ol>
+                            <img height="40" src="@i.ImageUrl" alt="@i.Title" />
+                            <div class="fw-bold">@i.Title</div>
+                            Category: @i.CategoryName | Stock: @i.Quantity
+                        </div>
+                        <div>
+                            <span class="badge text-bg-primary rounded-pill">@i.Price$</span>
+                            <a asp-action="Remove" asp-route-id="@i.Id" class="btn btn-outline-danger">
+                                <i class="bi bi-trash3"></i>
+                            </a>
+                        </div>
+                    </li>
+                }
+            </ol>
 
-        <a href="#" class="btn btn-success mt-3">Confirm</a>
+            <a href="#" class="btn btn-success mt-3">Confirm</a>
+        }
     </div>
     <div class="card-footer text-body-secondary">
         Total: 000$
