--- a/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
+++ b/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject ICartService cartService
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -36,7 +38,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">
-                                <i class="bi bi-basket-fill"></i> (0)
+                                <i class="bi bi-basket-fill"></i> (@cartService.GetCount())
                             </a>
                         </li>
                     </ul>
