--- a/ShopMvcApp_PD211/Views/_ViewImports.cshtml
+++ b/ShopMvcApp_PD211/Views/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using ShopMvcApp_PD211.Models
 @using Data.Entities
 @using Core.Dtos
-@using ShopMvcApp_PD211.Services
+@using Core.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
