--- a/ShopMvcApp_PD211/Views/Products/Index.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Index.cshtml
@@ -60,9 +60,9 @@
                 </td>
                 <td>@i.Discount%</td>
                 <td>
-                    <button type="button" class="btn btn-outline-secondary">
+                    <a class ="btn btn-outline-secondary" asp-controller="Products" asp-action="Details" asp-route-id="@i.Id">
                         <i class="bi bi-info-square-fill"></i>
-                    </button>
+                    </a>
                     <a class="btn btn-outline-warning" asp-controller="Products" asp-action="Edit" asp-route-id="@i.Id">
                         <i class="bi bi-pencil-fill"></i>
                     </a>
