--- a/ShopMvcApp_PD211/Views/Home/Index.cshtml
+++ b/ShopMvcApp_PD211/Views/Home/Index.cshtml
@@ -22,10 +22,14 @@
     @foreach (var i in Model)
     {
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card text-center" style="width: 18rem;">
                 <img height="170" src="@i.ImageUrl" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">@i.Title</h5>
+                    <h5 class="card-title">
+                        <a asp-controller="Products" asp-action="Details" asp-route-id="@i.Id">
+                            @i.Title
+                        </a>
+                    </h5>
                     <p class="card-text">@i.Price$ - @i.Quantity</p>
                     <a asp-controller="Cart" asp-action="Add" asp-route-id="@i.Id" asp-route-returnUrl="@Context.Request.Path" class="btn btn-primary">Add to Cart</a>
                 </div>
