--- a/ShopMvcApp_PD211/Views/Products/Details.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Details.cshtml
@@ -1,11 +1,12 @@
 ﻿@model ProductDto
 
-<h1>@Model.Title</h1>
+<div class="text-center">
+    <h1>@Model.Title</h1>
 
-<img src="@Model.ImageUrl" height="300" />
+    <img src="@Model.ImageUrl" height="300" />
 
-<p>Price: @Model.Price$</p>
+    <p>Price: @Model.Price$</p>
 
-<a asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id" asp-route-returnUrl="@Context.Request.Path" class="btn btn-primary">Add to Cart</a>
-
+    <a asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id" asp-route-returnUrl="@Context.Request.Path" class="btn btn-primary">Add to Cart</a>
+</div>
 
