--- a/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
+++ b/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex tiojustify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-flex justify-content-between">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -35,12 +35,15 @@
                             <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
                     </ul>
+
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item me-5">
                             <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">
                                 <i class="bi bi-basket-fill"></i> (@cartService.GetCount())
                             </a>
                         </li>
+
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
