--- a/ShopMvcApp_PD211/Views/Cart/Index.cshtml
+++ b/ShopMvcApp_PD211/Views/Cart/Index.cshtml
@@ -40,7 +40,7 @@
                 }
             </ol>
 
-            <a href="#" class="btn btn-success mt-3">Confirm</a>
+            <a asp-controller="Orders" asp-action="Create" class="btn btn-success mt-3">Confirm</a>
         }
     </div>
     <div class="card-footer text-body-secondary">
