--- a/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
+++ b/ShopMvcApp_PD211/Views/Shared/_Layout.cshtml
@@ -34,9 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Orders</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Orders</a>
+                            </li>
+                        }
                     </ul>
 
                     <ul class="navbar-nav">
