--- a/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
@@ -4,7 +4,7 @@
 }
 <h1>@(create ? "Create" : "Edit") Product Form</h1>
 
-<form class="row g-3" method="post" asp-action="@(create ? "Create" : "Edit")">
+<form class="row g-3" method="post" enctype="multipart/form-data" asp-action="@(create ? "Create" : "Edit")">
 
     <div class="col-2">
         <label asp-for=Id class="form-label">Id</label>
@@ -28,14 +28,14 @@
     <div class="col-md-4">
         <label asp-for=Discount class="form-label">Discount</label>
         <div class="input-group">
-            <input asp-for=Discount type="number" min="0" max="100" class="form-control" placeholder="Enter product discount">
+            <input value="0" asp-for=Discount type="number" min="0" max="100" class="form-control" placeholder="Enter product discount">
             <span class="input-group-text">%</span>
         </div>
         <span class="small text-danger" asp-validation-for="Discount"></span>
     </div>
     <div class="col-md-3">
         <label asp-for=Quantity class="form-label">Quantity</label>
-        <input required asp-for=Quantity type="number" min="0" class="form-control" placeholder="Enter product quantity">
+        <input value="1" required asp-for=Quantity type="number" min="0" class="form-control" placeholder="Enter product quantity">
         <span class="small text-danger" asp-validation-for="Quantity"></span>
     </div>
 
@@ -47,10 +47,14 @@
         <span class="small text-danger" asp-validation-for="CategoryId"></span>
     </div>
 
-    <div class="col-6">
+    @* <div class="col-6">
         <label asp-for=ImageUrl class="form-label">Image URL</label>
         <input asp-for=ImageUrl type="url" class="form-control" placeholder="Enter product image URL">
         <span class="small text-danger" asp-validation-for="ImageUrl"></span>
+    </div> *@
+    <div class="col-6">
+        <label asp-for="Image" class="form-label">Image</label>
+        <input asp-for="Image" class="form-control" type="file" id="formFile">
     </div>
 
     <div class="col-12 mb-3">
