--- a/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
+++ b/ShopMvcApp_PD211/Views/Products/Upsert.cshtml
@@ -4,6 +4,12 @@
 }
 <h1>@(create ? "Create" : "Edit") Product Form</h1>
 
+@if(!create)
+{
+    <div class="text-center">
+        <img height="150" class="rounded-2" src="@Model.ImageUrl" />
+    </div>
+}
 <form class="row g-3" method="post" enctype="multipart/form-data" asp-action="@(create ? "Create" : "Edit")">
 
     <div class="col-2">
@@ -52,6 +58,8 @@
         <input asp-for=ImageUrl type="url" class="form-control" placeholder="Enter product image URL">
         <span class="small text-danger" asp-validation-for="ImageUrl"></span>
     </div> *@
+    <input asp-for="ImageUrl" hidden />
+
     <div class="col-6">
         <label asp-for="Image" class="form-label">Image</label>
         <input asp-for="Image" class="form-control" type="file" id="formFile">
